// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/WText should have a "class" for each font family defined at Fonts catalog 1`] = `
<View>
  <View>
    <_class
      cls="bold"
      key="bold"
      scaled={false}
      size={16}
    >
      <Text
        scaled={false}
        size={16}
        style={
          Array [
            undefined,
            Array [
              Object {
                "backgroundColor": "transparent",
                "color": "#222",
                "fontFamily": "Ubuntu-Regular",
                "fontSize": 16,
                "lineHeight": 20,
              },
              Object {
                "fontFamily": "Ubuntu-Bold",
              },
            ],
            Object {
              "fontSize": 16,
              "lineHeight": 20,
            },
            undefined,
          ]
        }
      >
        <Text
          scaled={false}
          size={16}
          style={
            Array [
              undefined,
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "#222",
                  "fontFamily": "Ubuntu-Regular",
                  "fontSize": 16,
                  "lineHeight": 20,
                },
                Object {
                  "fontFamily": "Ubuntu-Bold",
                },
              ],
              Object {
                "fontSize": 16,
                "lineHeight": 20,
              },
              undefined,
            ]
          }
        >
          test
        </Text>
      </Text>
    </_class>
    <_class
      cls="italic"
      key="italic"
      scaled={false}
      size={16}
    >
      <Text
        scaled={false}
        size={16}
        style={
          Array [
            undefined,
            Array [
              Object {
                "backgroundColor": "transparent",
                "color": "#222",
                "fontFamily": "Ubuntu-Regular",
                "fontSize": 16,
                "lineHeight": 20,
              },
              Object {
                "fontFamily": "Ubuntu-Italic",
              },
            ],
            Object {
              "fontSize": 16,
              "lineHeight": 20,
            },
            undefined,
          ]
        }
      >
        <Text
          scaled={false}
          size={16}
          style={
            Array [
              undefined,
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "#222",
                  "fontFamily": "Ubuntu-Regular",
                  "fontSize": 16,
                  "lineHeight": 20,
                },
                Object {
                  "fontFamily": "Ubuntu-Italic",
                },
              ],
              Object {
                "fontSize": 16,
                "lineHeight": 20,
              },
              undefined,
            ]
          }
        >
          test
        </Text>
      </Text>
    </_class>
    <_class
      cls="light"
      key="light"
      scaled={false}
      size={16}
    >
      <Text
        scaled={false}
        size={16}
        style={
          Array [
            undefined,
            Array [
              Object {
                "backgroundColor": "transparent",
                "color": "#222",
                "fontFamily": "Ubuntu-Regular",
                "fontSize": 16,
                "lineHeight": 20,
              },
              Object {
                "fontFamily": "Ubuntu-Light",
              },
            ],
            Object {
              "fontSize": 16,
              "lineHeight": 20,
            },
            undefined,
          ]
        }
      >
        <Text
          scaled={false}
          size={16}
          style={
            Array [
              undefined,
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "#222",
                  "fontFamily": "Ubuntu-Regular",
                  "fontSize": 16,
                  "lineHeight": 20,
                },
                Object {
                  "fontFamily": "Ubuntu-Light",
                },
              ],
              Object {
                "fontSize": 16,
                "lineHeight": 20,
              },
              undefined,
            ]
          }
        >
          test
        </Text>
      </Text>
    </_class>
    <_class
      cls="medium"
      key="medium"
      scaled={false}
      size={16}
    >
      <Text
        scaled={false}
        size={16}
        style={
          Array [
            undefined,
            Array [
              Object {
                "backgroundColor": "transparent",
                "color": "#222",
                "fontFamily": "Ubuntu-Regular",
                "fontSize": 16,
                "lineHeight": 20,
              },
              Object {
                "fontFamily": "Ubuntu-Medium",
              },
            ],
            Object {
              "fontSize": 16,
              "lineHeight": 20,
            },
            undefined,
          ]
        }
      >
        <Text
          scaled={false}
          size={16}
          style={
            Array [
              undefined,
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "#222",
                  "fontFamily": "Ubuntu-Regular",
                  "fontSize": 16,
                  "lineHeight": 20,
                },
                Object {
                  "fontFamily": "Ubuntu-Medium",
                },
              ],
              Object {
                "fontSize": 16,
                "lineHeight": 20,
              },
              undefined,
            ]
          }
        >
          test
        </Text>
      </Text>
    </_class>
    <_class
      cls="regular"
      key="regular"
      scaled={false}
      size={16}
    >
      <Text
        scaled={false}
        size={16}
        style={
          Array [
            undefined,
            Array [
              Object {
                "backgroundColor": "transparent",
                "color": "#222",
                "fontFamily": "Ubuntu-Regular",
                "fontSize": 16,
                "lineHeight": 20,
              },
              Object {
                "fontFamily": "Ubuntu-Regular",
              },
            ],
            Object {
              "fontSize": 16,
              "lineHeight": 20,
            },
            undefined,
          ]
        }
      >
        <Text
          scaled={false}
          size={16}
          style={
            Array [
              undefined,
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "#222",
                  "fontFamily": "Ubuntu-Regular",
                  "fontSize": 16,
                  "lineHeight": 20,
                },
                Object {
                  "fontFamily": "Ubuntu-Regular",
                },
              ],
              Object {
                "fontSize": 16,
                "lineHeight": 20,
              },
              undefined,
            ]
          }
        >
          test
        </Text>
      </Text>
    </_class>
    <_class
      cls="semibold"
      key="semibold"
      scaled={false}
      size={16}
    >
      <Text
        scaled={false}
        size={16}
        style={
          Array [
            undefined,
            Array [
              Object {
                "backgroundColor": "transparent",
                "color": "#222",
                "fontFamily": "Ubuntu-Regular",
                "fontSize": 16,
                "lineHeight": 20,
              },
              Object {
                "fontFamily": "Ubuntu-Medium",
              },
            ],
            Object {
              "fontSize": 16,
              "lineHeight": 20,
            },
            undefined,
          ]
        }
      >
        <Text
          scaled={false}
          size={16}
          style={
            Array [
              undefined,
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "#222",
                  "fontFamily": "Ubuntu-Regular",
                  "fontSize": 16,
                  "lineHeight": 20,
                },
                Object {
                  "fontFamily": "Ubuntu-Medium",
                },
              ],
              Object {
                "fontSize": 16,
                "lineHeight": 20,
              },
              undefined,
            ]
          }
        >
          test
        </Text>
      </Text>
    </_class>
  </View>
</View>
`;

exports[`Components/WText should have a "class" for each font size defined at Fonts catalog 1`] = `
<View>
  <View>
    <_class
      key="8"
      scaled={false}
      size="8"
    >
      <Text
        scaled={false}
        size="8"
        style={
          Array [
            undefined,
            Object {
              "backgroundColor": "transparent",
              "color": "#222",
              "fontFamily": "Ubuntu-Regular",
              "fontSize": 16,
              "lineHeight": 20,
            },
            Object {
              "fontSize": "8",
              "lineHeight": 10,
            },
            undefined,
          ]
        }
      >
        <Text
          scaled={false}
          size="8"
          style={
            Array [
              undefined,
              Object {
                "backgroundColor": "transparent",
                "color": "#222",
                "fontFamily": "Ubuntu-Regular",
                "fontSize": 16,
                "lineHeight": 20,
              },
              Object {
                "fontSize": "8",
                "lineHeight": 10,
              },
              undefined,
            ]
          }
        >
          test
        </Text>
      </Text>
    </_class>
    <_class
      key="9"
      scaled={false}
      size="9"
    >
      <Text
        scaled={false}
        size="9"
        style={
          Array [
            undefined,
            Object {
              "backgroundColor": "transparent",
              "color": "#222",
              "fontFamily": "Ubuntu-Regular",
              "fontSize": 16,
              "lineHeight": 20,
            },
            Object {
              "fontSize": "9",
              "lineHeight": 11.25,
            },
            undefined,
          ]
        }
      >
        <Text
          scaled={false}
          size="9"
          style={
            Array [
              undefined,
              Object {
                "backgroundColor": "transparent",
                "color": "#222",
                "fontFamily": "Ubuntu-Regular",
                "fontSize": 16,
                "lineHeight": 20,
              },
              Object {
                "fontSize": "9",
                "lineHeight": 11.25,
              },
              undefined,
            ]
          }
        >
          test
        </Text>
      </Text>
    </_class>
    <_class
      key="10"
      scaled={false}
      size="10"
    >
      <Text
        scaled={false}
        size="10"
        style={
          Array [
            undefined,
            Object {
              "backgroundColor": "transparent",
              "color": "#222",
              "fontFamily": "Ubuntu-Regular",
              "fontSize": 16,
              "lineHeight": 20,
            },
            Object {
              "fontSize": "10",
              "lineHeight": 12.5,
            },
            undefined,
          ]
        }
      >
        <Text
          scaled={false}
          size="10"
          style={
            Array [
              undefined,
              Object {
                "backgroundColor": "transparent",
                "color": "#222",
                "fontFamily": "Ubuntu-Regular",
                "fontSize": 16,
                "lineHeight": 20,
              },
              Object {
                "fontSize": "10",
                "lineHeight": 12.5,
              },
              undefined,
            ]
          }
        >
          test
        </Text>
      </Text>
    </_class>
    <_class
      key="11"
      scaled={false}
      size="11"
    >
      <Text
        scaled={false}
        size="11"
        style={
          Array [
            undefined,
            Object {
              "backgroundColor": "transparent",
              "color": "#222",
              "fontFamily": "Ubuntu-Regular",
              "fontSize": 16,
              "lineHeight": 20,
            },
            Object {
              "fontSize": "11",
              "lineHeight": 13.75,
            },
            undefined,
          ]
        }
      >
        <Text
          scaled={false}
          size="11"
          style={
            Array [
              undefined,
              Object {
                "backgroundColor": "transparent",
                "color": "#222",
                "fontFamily": "Ubuntu-Regular",
                "fontSize": 16,
                "lineHeight": 20,
              },
              Object {
                "fontSize": "11",
                "lineHeight": 13.75,
              },
              undefined,
            ]
          }
        >
          test
        </Text>
      </Text>
    </_class>
    <_class
      key="12"
      scaled={false}
      size="12"
    >
      <Text
        scaled={false}
        size="12"
        style={
          Array [
            undefined,
            Object {
              "backgroundColor": "transparent",
              "color": "#222",
              "fontFamily": "Ubuntu-Regular",
              "fontSize": 16,
              "lineHeight": 20,
            },
            Object {
              "fontSize": "12",
              "lineHeight": 15,
            },
            undefined,
          ]
        }
      >
        <Text
          scaled={false}
          size="12"
          style={
            Array [
              undefined,
              Object {
                "backgroundColor": "transparent",
                "color": "#222",
                "fontFamily": "Ubuntu-Regular",
                "fontSize": 16,
                "lineHeight": 20,
              },
              Object {
                "fontSize": "12",
                "lineHeight": 15,
              },
              undefined,
            ]
          }
        >
          test
        </Text>
      </Text>
    </_class>
    <_class
      key="14"
      scaled={false}
      size="14"
    >
      <Text
        scaled={false}
        size="14"
        style={
          Array [
            undefined,
            Object {
              "backgroundColor": "transparent",
              "color": "#222",
              "fontFamily": "Ubuntu-Regular",
              "fontSize": 16,
              "lineHeight": 20,
            },
            Object {
              "fontSize": "14",
              "lineHeight": 17.5,
            },
            undefined,
          ]
        }
      >
        <Text
          scaled={false}
          size="14"
          style={
            Array [
              undefined,
              Object {
                "backgroundColor": "transparent",
                "color": "#222",
                "fontFamily": "Ubuntu-Regular",
                "fontSize": 16,
                "lineHeight": 20,
              },
              Object {
                "fontSize": "14",
                "lineHeight": 17.5,
              },
              undefined,
            ]
          }
        >
          test
        </Text>
      </Text>
    </_class>
    <_class
      key="16"
      scaled={false}
      size="16"
    >
      <Text
        scaled={false}
        size="16"
        style={
          Array [
            undefined,
            Object {
              "backgroundColor": "transparent",
              "color": "#222",
              "fontFamily": "Ubuntu-Regular",
              "fontSize": 16,
              "lineHeight": 20,
            },
            Object {
              "fontSize": "16",
              "lineHeight": 20,
            },
            undefined,
          ]
        }
      >
        <Text
          scaled={false}
          size="16"
          style={
            Array [
              undefined,
              Object {
                "backgroundColor": "transparent",
                "color": "#222",
                "fontFamily": "Ubuntu-Regular",
                "fontSize": 16,
                "lineHeight": 20,
              },
              Object {
                "fontSize": "16",
                "lineHeight": 20,
              },
              undefined,
            ]
          }
        >
          test
        </Text>
      </Text>
    </_class>
    <_class
      key="18"
      scaled={false}
      size="18"
    >
      <Text
        scaled={false}
        size="18"
        style={
          Array [
            undefined,
            Object {
              "backgroundColor": "transparent",
              "color": "#222",
              "fontFamily": "Ubuntu-Regular",
              "fontSize": 16,
              "lineHeight": 20,
            },
            Object {
              "fontSize": "18",
              "lineHeight": 22.5,
            },
            undefined,
          ]
        }
      >
        <Text
          scaled={false}
          size="18"
          style={
            Array [
              undefined,
              Object {
                "backgroundColor": "transparent",
                "color": "#222",
                "fontFamily": "Ubuntu-Regular",
                "fontSize": 16,
                "lineHeight": 20,
              },
              Object {
                "fontSize": "18",
                "lineHeight": 22.5,
              },
              undefined,
            ]
          }
        >
          test
        </Text>
      </Text>
    </_class>
  </View>
</View>
`;

exports[`Components/WText should have the "classes": "title", "text", ... 1`] = `
<View>
  <View>
    <_class
      cls="left"
      key="left"
      scaled={false}
      size={16}
    >
      <Text
        scaled={false}
        size={16}
        style={
          Array [
            undefined,
            Array [
              Object {
                "backgroundColor": "transparent",
                "color": "#222",
                "fontFamily": "Ubuntu-Regular",
                "fontSize": 16,
                "lineHeight": 20,
              },
              Object {
                "textAlign": "left",
              },
            ],
            Object {
              "fontSize": 16,
              "lineHeight": 20,
            },
            undefined,
          ]
        }
      >
        <Text
          scaled={false}
          size={16}
          style={
            Array [
              undefined,
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "#222",
                  "fontFamily": "Ubuntu-Regular",
                  "fontSize": 16,
                  "lineHeight": 20,
                },
                Object {
                  "textAlign": "left",
                },
              ],
              Object {
                "fontSize": 16,
                "lineHeight": 20,
              },
              undefined,
            ]
          }
        >
          test
        </Text>
      </Text>
    </_class>
    <_class
      cls="center"
      key="center"
      scaled={false}
      size={16}
    >
      <Text
        scaled={false}
        size={16}
        style={
          Array [
            undefined,
            Array [
              Object {
                "backgroundColor": "transparent",
                "color": "#222",
                "fontFamily": "Ubuntu-Regular",
                "fontSize": 16,
                "lineHeight": 20,
              },
              Object {
                "textAlign": "center",
              },
            ],
            Object {
              "fontSize": 16,
              "lineHeight": 20,
            },
            undefined,
          ]
        }
      >
        <Text
          scaled={false}
          size={16}
          style={
            Array [
              undefined,
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "#222",
                  "fontFamily": "Ubuntu-Regular",
                  "fontSize": 16,
                  "lineHeight": 20,
                },
                Object {
                  "textAlign": "center",
                },
              ],
              Object {
                "fontSize": 16,
                "lineHeight": 20,
              },
              undefined,
            ]
          }
        >
          test
        </Text>
      </Text>
    </_class>
    <_class
      cls="right"
      key="right"
      scaled={false}
      size={16}
    >
      <Text
        scaled={false}
        size={16}
        style={
          Array [
            undefined,
            Array [
              Object {
                "backgroundColor": "transparent",
                "color": "#222",
                "fontFamily": "Ubuntu-Regular",
                "fontSize": 16,
                "lineHeight": 20,
              },
              Object {
                "textAlign": "right",
              },
            ],
            Object {
              "fontSize": 16,
              "lineHeight": 20,
            },
            undefined,
          ]
        }
      >
        <Text
          scaled={false}
          size={16}
          style={
            Array [
              undefined,
              Array [
                Object {
                  "backgroundColor": "transparent",
                  "color": "#222",
                  "fontFamily": "Ubuntu-Regular",
                  "fontSize": 16,
                  "lineHeight": 20,
                },
                Object {
                  "textAlign": "right",
                },
              ],
              Object {
                "fontSize": 16,
                "lineHeight": 20,
              },
              undefined,
            ]
          }
        >
          test
        </Text>
      </Text>
    </_class>
  </View>
</View>
`;

exports[`Components/WText should set a base style 1`] = `
Array [
  undefined,
  Object {
    "backgroundColor": "transparent",
    "color": "#222",
    "fontFamily": "Ubuntu-Regular",
    "fontSize": 16,
    "lineHeight": 20,
  },
  Object {
    "fontSize": 16,
    "lineHeight": 20,
  },
  undefined,
]
`;
